tob/tps/.svn/pristine/e1/e157c9e9af46cc024e304ce296a9fe6dfed94e7c.svn-base
allumettes/Arbitre.java:35: error: cannot find symbol
		} catch (OperationImpossibleException e){
		         ^
  symbol:   class OperationImpossibleException
  location: class Arbitre
./allumettes/Proxy.java:19: error: cannot find symbol
			throw new OperationImpossibleException();
			          ^
  symbol:   class OperationImpossibleException
  location: class Proxy
2 errors
